feat: Implementação de verificação da conta via e-mail
