# server/API/Controllers/UsuarioController.cs
@@ -6,7 +6,7 @@ namespace SkillSwap.API.Controllers;
 
 [ApiController]
 [Route("api/v1/usuario")]
-public class UsuarioController(IUsuarioService usuarioService) : ControllerBase
+public class UsuarioController(IUsuarioService usuarioService, IVerificacaoService verificacaoService) : ControllerBase
 {
     [HttpPost]
     public async Task<IActionResult> CriarUsuario([FromBody] CriarUsuarioRequestDTO dto)
@@ -46,5 +46,26 @@ public class UsuarioController(IUsuarioService usuarioService) : ControllerBase
         return resultado.Sucesso
             ? Ok(resultado.Value)
             : NotFound(resultado.Erro);
+    }
+
+    [HttpPost("{id}/verificacao/enviar")]
+    public async Task<IActionResult> EnviarCodigoVerificacao(Guid id,
+    [FromBody] EnviarCodigoRequestDTO dto)
+    {
+        var resultado = await verificacaoService.EnviarCodigoAsync(id, dto.Metodo);
+
+        return resultado.Sucesso
+            ? Ok()
+            : BadRequest(resultado.Erro);
+    }
+
+    [HttpPost("{id}/verificacao/validar")]
+    public async Task<IActionResult> ValidarCodigoVerificacao(Guid id, [FromBody] ValidarCodigoRequestDTO dto)
+    {
+        var resultado = await verificacaoService.ValidarCodigoAsync(id, dto.Codigo);
+
+        return resultado.Sucesso
+            ? Ok()
+            : BadRequest(resultado.Erro);
     }
 }
