# server/Application/Usuarios/DTOs/EnviarCodigoRequestDTO.cs
@@ -1,0 +1,1 @@
+public record EnviarCodigoRequestDTO(string Metodo);
